--- a/styles/style.css
+++ b/styles/style.css
@@ -108,6 +108,11 @@ button {
     background-color: rgb(123, 189, 255);
 }
 
+/* 
+    Set background-color for the new buttons, make it bold
+    also change the active color to a one taht looks nice
+    with the neew button color
+ */
 .operand-special {
     background-color: rgb(37, 247, 247);
     font-weight: 700;
@@ -117,17 +122,7 @@ button {
     background-color: rgb(123, 189, 255);
 }
 
-/* 
-/* console-cursor text-dark */
-#text-cursor {
-    color:#FF8F1F;
-    --bs-text-opacity: 1;
-    color: rgba(var(--bs-dark-rgb),var(--bs-text-opacity));
-}
-/* .console-cursor {
-    animation: blinker 0.5s step-start infinite;
-} */
-
+/* Set font color for znumber */
 #znumber {
     color: #740909;
 
